# chess

./: .gitignore  Cargo.toml  README.md  debug.txt
.cargo/: config
.github/PULL_REQUEST_TEMPLATE/: fanfic.md  pull_request_template.md
src/: ai.rs  board.rs  color.rs  ease.rs  layout.rs  lib.rs  main.rs  particle.rs  rect.rs  screen.rs  ui.rs
