[package]
name = "chess"
version = "0.1.0"
authors = ["Aaron Kofsky <aaronko@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "=0.5.0"
newtype_derive = "0.1.6"
rand = "0.7.3"

[profile.dev.package."*"]
opt-level = 3
